project-card-alignment-fixes

--- a/src/App.css
+++ b/src/App.css
@@ -673,8 +673,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 1.3rem;
   font-weight: 700;
   letter-spacing: 0.8px;
-  line-height: 1.1em;
 }
+
 .proj-txtx span {
   display: flex;
   justify-content: center;
@@ -764,11 +764,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   }
   
   .proj-txtx span {
+    font-size: 0.7rem;
     padding: 0;
   }
   
   .proj-txtx a {
     font-size: 1rem;
+    margin: 10px;
   }
 
   .project p {
